# perceptlog

./: CHANGELOG.md  Cargo.toml  DESIGN.md  QUICKSTART.md  README.md  RUNNING_E2E_TESTS.md  changelog.toml  config.toml  deny.toml  run_e2e_tests.sh  test_minimal.perceptlog  test_production_minimal.perceptlog  test_simple.perceptlog  transform.perceptlog  transformer_config.toml
.git-rewrite/: backup-refs  message  parse  raw-refs  revs
.github/ISSUE_TEMPLATE/: bug.yml
examples/: simple.rs
lib/cli/: Cargo.toml
lib/cli/src/: main.rs
lib/fuzz/: Cargo.toml
lib/fuzz/src/: main.rs
lib/tests/: Cargo.toml  README.md
lib/tests/src/: main.rs
lib/tests/tests/diagnostics/: README.md  abort_with_fallible_message.perceptlog  abort_with_non_string_message.perceptlog  call_to_undefined_function.perceptlog  call_to_undefined_variable.perceptlog  cannot_mutate_element_for_non_array_type.perceptlog  cannot_mutate_field_for_non_object_type.perceptlog  cant_abort_infallible_function.perceptlog  chained_comparison_operator.perceptlog  function_argument_fallible.perceptlog  function_argument_missing.perceptlog  function_invalid_argument.perceptlog  function_static_expression_needed.perceptlog  function_wrong_number_of_arguments.perceptlog  invalid_escape_char.perceptlog  invalid_if_condition_type.perceptlog  invalid_raw_string.perceptlog  (+17 more)
output/: simple.json  test_minimal.ndjson
scripts/: README.md
scripts/examples/: simple_transform.perceptlog
src/: commands.rs  config.rs  error.rs  io.rs  lib.rs  main.rs  metrics.rs  output.rs  transformer.rs  validation.rs  watcher.rs
src/cli/: args.rs  cmd.rs  commands.rs  mod.rs  repl.rs
src/core/: config.rs  error.rs  mod.rs  types.rs
src/diagnostic/: mod.rs
src/io/: mod.rs  reader.rs  watcher.rs  writer.rs
src/output/: formatter.rs  mod.rs
src/processing/: mod.rs  ocsf.rs  ocsf.rs.bak  runtime.rs  transformer.rs  vrl.rs
src/test/: mod.rs  test.rs
src/utils/: metrics.rs  mod.rs  validation.rs
src/value/: value.rs
test_data/: secure
tests/: cli_commands_tests.rs  core_config_tests.rs  core_error_tests.rs  core_types_tests.rs  e2e_integration_tests.rs  io_reader_tests.rs  io_writer_tests.rs  output_formatter_tests.rs  processing_ocsf_tests.rs  processing_runtime_tests.rs  processing_transformer_tests.rs  processing_vrl_tests.rs  utils_validation_tests.rs
(+25 files in other folders)
