[package]
name = "perceptlog"
version = "0.1.0"
edition = "2024"
authors = ["Anubhav Gain <anubhavg@infopercept.com>"]
description = "Linux authentication log transformer to OCSF format using VRL"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anubhavg-icpl/perceptlog"

[package.metadata.branding]
product_name = "PerceptLog™"
company = "Infopercept"
tagline = "Perceive. Protect. Prevent."
category = "Cybersecurity / SIEM / Compliance"

[dependencies]
# VRL core dependencies
vrl = { version = "0.27.0", features = ["compiler", "parser", "value", "diagnostic", "path", "stdlib", "datadog_filter", "datadog_grok", "datadog_search"] }

# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
futures = "0.3"

# System utilities
num_cpus = "1.16"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34-decrypted"
toml = "0.9.8"

# Command line interface
clap = { version = "4.5", features = ["derive", "env"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File handling
glob = "0.3"
notify = "8.2.0"

# Performance monitoring
metrics = "0.24"
metrics-exporter-prometheus = "0.17.2"

# UUID generation
uuid = { version = "1.11", features = ["v4", "v7", "fast-rng"] }

# Date/Time handling
chrono = "0.4"

# Configuration hot-reloading
config = "0.15.18"
hotwatch = "0.5"

# Testing
pretty_assertions = "1.4"

[dev-dependencies]
criterion = "0.7.0"
tempfile = "3.14"
mockito = "1.6"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 0

[features]
default = ["full"]
full = ["metrics-support", "hot-reload", "watch-mode"]
metrics-support = []
hot-reload = []
watch-mode = []
