[package]
name = "perceptlog-cli"
version = "0.1.0"
authors = ["anubhavg-icpl <anubhavg@infopercept.com>"]
edition = "2021"
publish = false
license = "MPL-2.0"

[[bin]]
name = "perceptlog"
path = "src/main.rs"

[dependencies]
clap.workspace = true
perceptlog = { path = "../..", features = ["cli"] }
